trunk/source/Library-Lethal/src/de/uni_muenster/cs/sev/lethal/parser/hedgegrammar/HedgeGrammarParser.java
/* Generated By:JavaCC: Do not edit this line. HedgeGrammarParser.java */
package de.uni_muenster.cs.sev.lethal.parser.hedgegrammar;

import de.uni_muenster.cs.sev.lethal.hedgegrammar.*;
import java.util.*;
import java.io.ByteArrayInputStream;
import de.uni_muenster.cs.sev.lethal.symbol.standard.StdNamedUnrankedSymbol;
import de.uni_muenster.cs.sev.lethal.symbol.common.UnrankedSymbol;

/**
 * Hedge grammar parser
 * @author Philipp
 */
public class HedgeGrammarParser implements HedgeGrammarParserConstants {

        private static HedgeGrammarParser parser = new HedgeGrammarParser(new ByteArrayInputStream(new byte[]{}));

        public static EasyHedgeGrammar parseString(String s) throws ParseException{
                //System.out.println(nonTerminalNames(s));
                parser.ReInit(new ByteArrayInputStream((s+ "\u005cn").getBytes()));
                return parser.grammar();
        }

        public static Set<String> nonTerminalNames(String s){
                String name;
                HashSet<String> names = new HashSet<String>();
                for (String line : s.split("\u005cn")){
                        int i = line.indexOf("::=");
                        if (i < 0) {
                                name = line.trim();
                        } else {
                                name = line.substring(0,i).trim();
                        }
                        if (name.length() != 0) names.add(name);
                }
                return names;
        }

                private static List<String> stringRange(String startName, String endName) throws ParseException{
                List<String> names = new ArrayList<String>();
                names.add(startName);

                if (endName != null){
                        if (startName.length() != endName.length()) throw new ParseException("Ranges only support equal length names");
                        StringBuffer currentName = new StringBuffer(startName);
                        while (!currentName.toString().equals(endName)){
                                for (int pos = 0; pos < startName.length(); pos++){
                                        if (startName.charAt(pos) != endName.charAt(pos)){
                                                if (currentName.charAt(pos) < endName.charAt(pos)){
                                                        currentName.setCharAt(pos, (char)(currentName.charAt(pos) + 1));
                                                        names.add(currentName.toString());
                                                        break;
                                                } else {
                                                        currentName.setCharAt(pos, startName.charAt(pos));
                                                }
                                        }
                                }
                        }
                }
                return names;
        }

  final public EasyHedgeGrammar grammar() throws ParseException {
        Nonterminal<UnrankedSymbol> startSymbol;
        List<GrammarRule<UnrankedSymbol>> lineRules;
        Set<GrammarRule<UnrankedSymbol>> rules = new HashSet<GrammarRule<UnrankedSymbol>>();
        Set<Nonterminal<UnrankedSymbol>> startSymbols = new HashSet<Nonterminal<UnrankedSymbol>>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LINE_END_COMMENT:
      case 7:
      case 21:
      case 22:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(4)) {
        startSymbol = nonTerminal();
                                                    startSymbols.add(startSymbol);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LINE_END_COMMENT:
          jj_consume_token(LINE_END_COMMENT);
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        jj_consume_token(7);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 21:
        case 22:
          lineRules = rules();
                                                                                                                                      rules.addAll(lineRules);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LINE_END_COMMENT:
            jj_consume_token(LINE_END_COMMENT);
            break;
          default:
            jj_la1[2] = jj_gen;
            ;
          }
          jj_consume_token(7);
          break;
        case LINE_END_COMMENT:
        case 7:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LINE_END_COMMENT:
            jj_consume_token(LINE_END_COMMENT);
            break;
          default:
            jj_la1[3] = jj_gen;
            ;
          }
          jj_consume_token(7);
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
         {if (true) return new EasyHedgeGrammar(rules, startSymbols);}
    throw new Error("Missing return statement in function");
  }

  final public List<GrammarRule<UnrankedSymbol>> rules() throws ParseException {
        Nonterminal<UnrankedSymbol> left;
        List<Function<UnrankedSymbol>> right;
        List<GrammarRule<UnrankedSymbol>> rules = new ArrayList<GrammarRule<UnrankedSymbol>>();
    left = nonTerminal();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
      break;
    case 9:
      jj_consume_token(9);
      break;
    case 10:
      jj_consume_token(10);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    right = functionList();
                for (Function<UnrankedSymbol> func : right){
                        rules.add(new GrammarRule<UnrankedSymbol>(left, func.getTerminal(), func.getExpression()));
                }
                {if (true) return rules;}
    throw new Error("Missing return statement in function");
  }

  final public GrammarExpression expression() throws ParseException {
        GrammarExpression<UnrankedSymbol> leftExp;
        GrammarExpression<UnrankedSymbol> rightExp = null;
        String smin;
        String smax;
        int min = 1;
        int max = -1;
        boolean boundsGiven = false;
        boolean disj = false;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
    case 22:
      leftExp = nonTerminal();
      break;
    case NAME:
    case 18:
      leftExp = functionAlternation();
      break;
    case 11:
      jj_consume_token(11);
      leftExp = expression();
      jj_consume_token(12);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RSTART:
    case 13:
    case 14:
    case 15:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RSTART:
        smin = jj_consume_token(RSTART).image;
        smax = jj_consume_token(REND).image;
                        min = (smin.length() > 1 ? Integer.valueOf(smin.substring(1,smin.length())) : 0);
                        max = (smax.length() > 2 ? Integer.valueOf(smax.substring(1,smax.length()-1)) : -1);
                        boundsGiven=true;
        break;
      case 13:
        jj_consume_token(13);
                         min=0;max=-1;boundsGiven=true;
        break;
      case 14:
        jj_consume_token(14);
                         min=1;max=-1;boundsGiven=true;
        break;
      case 15:
        jj_consume_token(15);
                         min=0;max=1 ;boundsGiven=true;
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 17:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 16:
        jj_consume_token(16);
        rightExp = expression();
                                             disj = true;
        break;
      case 17:
        jj_consume_token(17);
        rightExp = expression();
                                               disj = false;
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
                if (!boundsGiven) min = max = 1;
                if (min != 1 || max != 1) {
                        leftExp = new Range<UnrankedSymbol>(min,max, leftExp);
                }

                if (rightExp != null){
                        if (disj) {
                                {if (true) return new Alternation<UnrankedSymbol>(leftExp, rightExp);}
                        } else {
                                {if (true) return new Concatenation<UnrankedSymbol>(leftExp, rightExp);}
                        }
                } else {
                        {if (true) return leftExp;}
                }
    throw new Error("Missing return statement in function");
  }

  final public GrammarExpression<UnrankedSymbol> functionAlternation() throws ParseException {
        List<Function<UnrankedSymbol>> functions = null;
    functions = functionList();
                GrammarExpression<UnrankedSymbol> exp = functions.remove(0);
                for (Function<UnrankedSymbol> func : functions){
                        exp = new Alternation(exp, func);
                }
                {if (true) return exp;}
    throw new Error("Missing return statement in function");
  }

  final public List<Function<UnrankedSymbol>> functionList() throws ParseException {
        List<Terminal<UnrankedSymbol>> terminals;
        GrammarExpression<UnrankedSymbol> exp = new Epsilon();
    terminals = terminals();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 11:
      jj_consume_token(11);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
      case 11:
      case 18:
      case 21:
      case 22:
        exp = expression();
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(12);
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
                List<Function<UnrankedSymbol>> result = new ArrayList<Function<UnrankedSymbol>>();
                for (Terminal terminal : terminals){
                        result.add(new Function<UnrankedSymbol>(terminal, exp));
                }
                {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public List<Terminal<UnrankedSymbol>> terminals() throws ParseException {
        Terminal<UnrankedSymbol> terminal = null;
        List<Terminal<UnrankedSymbol>> terminals = new ArrayList<Terminal<UnrankedSymbol>>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      terminal = terminal();
                                 terminals.add(terminal);
      break;
    case 18:
      jj_consume_token(18);
      terminals = terminalSet();
      jj_consume_token(19);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return terminals;}
    throw new Error("Missing return statement in function");
  }

  final public List<Terminal<UnrankedSymbol>> terminalSet() throws ParseException {
        String startName;
        String endName = null;
        List<Terminal<UnrankedSymbol>> terminals = null;
    startName = jj_consume_token(NAME).image;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 20:
      jj_consume_token(20);
      endName = jj_consume_token(NAME).image;
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 17:
      jj_consume_token(17);
      terminals = terminalSet();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
                if (terminals == null) terminals = new ArrayList<Terminal<UnrankedSymbol>>();
                for (String name : stringRange(startName,endName)){
                        terminals.add(new Terminal<UnrankedSymbol>(new StdNamedUnrankedSymbol(name)));
                }
                {if (true) return terminals;}
    throw new Error("Missing return statement in function");
  }

  final public Terminal<UnrankedSymbol> terminal() throws ParseException {
        String name;
    name = jj_consume_token(NAME).image;
                             {if (true) return new Terminal<UnrankedSymbol>(new StdNamedUnrankedSymbol(name));}
    throw new Error("Missing return statement in function");
  }

  final public Nonterminal<UnrankedSymbol> nonTerminal() throws ParseException {
        String name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      jj_consume_token(21);
      break;
    case 22:
      jj_consume_token(22);
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    name = jj_consume_token(NAME).image;
                                           {if (true) return new Nonterminal<UnrankedSymbol>(name);}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_3_1() {
    if (jj_3R_2()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(6)) jj_scanpos = xsp;
    if (jj_scan_token(7)) return true;
    return false;
  }

  private boolean jj_3R_2() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) return true;
    }
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public HedgeGrammarParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[17];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x6000c0,0x40,0x40,0x40,0x6000c0,0x700,0x640808,0xe010,0xe010,0x30000,0x30000,0x640808,0x800,0x40008,0x100000,0x20000,0x600000,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[1];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public HedgeGrammarParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public HedgeGrammarParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new HedgeGrammarParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public HedgeGrammarParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new HedgeGrammarParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public HedgeGrammarParser(HedgeGrammarParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(HedgeGrammarParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 17; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[23];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 17; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 23; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 1; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
